Add stub 64-bit Arm backend; rename 32-bit Arm syscall generator for consistency

--- a/FAQ.html
+++ b/FAQ.html
@@ -81,7 +81,7 @@
   up, and on Unix in particular as soon as you drag libc in it tends
   to want to take over things like memory management, and pretty much everything
   else depends on (a particular version of) libc. Thus, I'd rather work
-  at the syscall level and control it all myself, given what I'm aiming for.#
+  at the syscall level and control it all myself, given what I'm aiming for.
 </p>
 <p>
   There is basic interoperability with Windows libraries, however,
